--- a/Path_Counter.ipynb
+++ b/Path_Counter.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](grid.png)"
+    "![title](Images/grid.png)"
    ]
   },
   {
